# vamos-common

./: CMakeLists.txt  README.md  config.py.in
cmake/vamos-common/: vamos-common-config.cmake.in
python/vamos_common/codegen/: codegen.py  events.py  traces.py
python/vamos_common/codegen/lang/: cpp.py
python/vamos_common/codegen/templates/cpp/: program_data.h
python/vamos_common/parser/: ast.py  context.py
python/vamos_common/spec/ir/: constant.py  element.py  expr.py  identifier.py  ir.py
python/vamos_common/types/: methods.py  type.py  typecheck.py
vamos_common/codegen/: events.py  traces.py
vamos_common/codegen/lang/: cpp.py
vamos_common/codegen/templates/cpp/: command_line_arg.cpp  command_line_arg.h
vamos_common/parser/: ast.py  context.py
vamos_common/spec/ir/: constant.py  decls.py  element.py  expr.py
vamos_common/types/: type.py  typecheck.py
